<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/TextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 왼쪽에 그림 2 -->
        <android.widget.Button
            android:id="@+id/category_back_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:background="@drawable/category_back"
            android:contentDescription="My Button Description" />

        <TextView
            android:id="@+id/category_text"
            android:layout_width="12dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:text="" />

        <android.widget.Button
            android:id="@+id/category_menu_id"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/category_menu_icon"
            android:contentDescription="My Button Description" />

        <TextView
            android:id="@+id/category_text2"
            android:layout_width="58dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:text="" />

        <!-- 상단에 텍스트 뷰 -->
        <TextView
            android:id="@+id/category_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:text="@string/category_top"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/category_text3"
            android:layout_width="159dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:text="" />


    </LinearLayout>



        <HorizontalScrollView
            android:id="@+id/category_horizontal_scrollview_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@id/TextContainer">

            <LinearLayout
                android:id="@+id/horizontal_buttonContainer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_1"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_2"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_3"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_4"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_5"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_6"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_7"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_8"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_9"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_10"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_11"
                    android:textColor="@color/category_text_color" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:text="@string/category_top_12"
                    android:textColor="@color/category_text_color" />

            </LinearLayout>
        </HorizontalScrollView>


    <View
        android:id="@+id/rectangle_id"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/category_light_gray_color"
        app:layout_constraintBottom_toBottomOf="@id/category_horizontal_scrollview_id" />

    <TextView
        android:id="@+id/winter_update_text_id"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/category_winter_update"
        android:textColor="@color/category_main_color"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/category_horizontal_scrollview_id" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_category_recyclerView"
        android:layout_width="390dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winter_update_text_id"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>